--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "threejs-es6-webpack-starter-landsat",
+    "name": "sweden3d",
     "version": "0.0.1",
-    "description": "A starter project for Three.js with support for ES6 and Webpack 4",
+    "description": "3D map of Sweden",
     "main": "./src/js/index.js",
     "private": true,
     "scripts": {
@@ -18,8 +18,8 @@
         "test": "jest --verbose",
         "static": "chromium-browser build/index.html"
     },
-    "repository": "https://github.com/zhunor/threejs-dem-visualizer",
-    "author": "zhunor <ozerorhun@gmail.com>",
+    "repository": "https://github.com/nmb/sweden3d",
+    "author": "Mikael Borg <mikael.borg@gmail.com>",
     "license": "MIT",
     "dependencies": {
         "geotiff": "^1.0.0-beta.6",
@@ -65,7 +65,7 @@
         "sass"
     ],
     "bugs": {
-        "url": "https://github.com/zhunor/threejs-es6-webpack-starter/issues"
+        "url": "https://github.com/nmb/sweden3d/issues"
     },
-    "homepage": "https://github.com/zhunor/threejs-es6-webpack-starter"
+    "homepage": "https://github.com/nmb/sweden3d"
 }
